--- a/VideoPlayer/packages.config
+++ b/VideoPlayer/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.11" targetFramework="net472" />
+  <package id="Vlc.DotNet.Core" version="3.1.0" targetFramework="net472" />
+  <package id="Vlc.DotNet.Core.Interops" version="3.1.0" targetFramework="net472" />
+  <package id="Vlc.DotNet.Wpf" version="3.1.0" targetFramework="net472" />
 </packages>
