--- a/VideoPlayer/VideoPlayer.csproj
+++ b/VideoPlayer/VideoPlayer.csproj
@@ -208,6 +208,12 @@
     <Resource Include="images\pause1.png" />
     <Resource Include="images\play1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\full-screen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\exit-full-screen.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\VideoLAN.LibVLC.Windows.3.0.11\build\VideoLAN.LibVLC.Windows.targets" Condition="Exists('..\packages\VideoLAN.LibVLC.Windows.3.0.11\build\VideoLAN.LibVLC.Windows.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
